<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aeropuerto Santiago de Chile</string>
    <string name="facebook_app_id">1043604535723233</string>

    <string name="airportSantiagoChile">Santiago De Chile</string>
    <!-- Initial -->
    <string name="initialTitleKey">Síguenos</string>
    <string name="initialSubTitleKey">Lo compartimos todo contigo</string>
    <string name="initialButtonTitleKey">Recordar más tarde</string>
    <string name="noRememberButtonKey">No recordar</string>
    <!-- Home -->
    <string name="homeDepartureButtonTitleKey">SALIDAS</string>
    <string name="homeArribalButtonTitleKey">LLEGADAS</string>
    <string name="homeMyFlightsButtonTitleKey">MIS VUELOS</string>
    <string name="homeSearchFlightPlaceholderTextKey">Busca un vuelo (Línea Aérea, Número, Origen/destino)</string>
    <!-- Menu -->
    <string name="menuOptionHomeTitleKey">Home</string>
    <string name="menuOptionUserFlightsTitleKey">Mis Vuelos</string>
    <string name="menuOptionFlightsTitleKey">Llegadas / Salidas</string>
    <string name="menuOptionFlightsDeparturesTitleKey">Salidas</string>
    <string name="menuOptionFlightsArrivesTitleKey">Llegadas</string>
    <string name="menuOptionParkingTitleKey">Parking</string>
    <string name="menuOptionBeforeFlightTitleKey">Antes del Vuelo</string>
    <string name="menuOptionAirportTitleKey">En el Aeropuerto</string>
    <string name="menuOptionPromosTitleKey">Informaciones QR</string>
    <string name="menuOptionConfigTitleKey">Configuración</string>
    <string name="menuOptionNewTitleKey">Nuevo Pudahuel</string>
    <string name="menuOptionParkingUrlKey">https://www.nuevopudahuel.cl/estacionamiento?pos=tarifas</string>
    <string name="menuOptionBeforeUrlKey">https://www.nuevopudahuel.cl/antes-del-vuelo</string>
    <string name="menuOptionAirportUrlKey">https://www.nuevopudahuel.cl/en-el-aeropuerto</string>
    <string name="menuOptionPlansTitleKey">Planos</string>
    <!-- Flight -->
    <string name="flightHeaderFlightTitleKey">Vuelo</string>
    <string name="flightHeaderOriginTitleKey">Origen</string>
    <string name="flightHeaderDestinationTitleKey">Destino</string>
    <string name="flightHeaderTimeTitleKey">Tiempo</string>
    <string name="flightHeaderStatusTitleKey">Estado</string>
    <!-- Flight Detail -->
    <string name="flightDetailAlertTitleKey">Alerta</string>
    <string name="flightDetailFlightTitleKey">Vuelo</string>
    <string name="flightDetailTimeTitleKey">Tiempo</string>
    <string name="flightDetailStatusTitleKey">Estado</string>
    <string name="flightDetailCreateAlertTitleKey">Crea una alerta para este vuelo</string>
    <string name="flightDetailDisableAlertTitleKey">Elimina la alerta para este vuelo</string>
    <string name="flightDetailShareTitleKey">Comparte este vuelo</string>
    <string name="flightDetailAlertCreateTitleKey">Alerta creada</string>
    <string name="flightDetailAlertCreateMsgKey">Puedes administrar todas tus alertas desde Mis vuelos.</string>
    <string name="flightDetailAlertCreateOkTitleKey">OK</string>
    <string name="flightDetailAlertDisableTitleKey">Alerta eliminada</string>
    <string name="flightDetailAlertDisableMsgKey">Puedes volver a crear una alerta cuando quieras.</string>
    <string name="flightDetailShareEmailTitleKey">Email</string>
    <string name="flightDetailShareFacebookTitleKey">Facebook</string>
    <string name="flightDetailShareTwitterTitleKey">Twitter</string>
    <string name="flightDetailShareCancelTitleKey">Cancelar</string>
    <string name="flightDetailShareErrorTitleKey">Error</string>
    <string name="flightDetailShareErrorEmailMsgKey">No puede conectar con su email ahora, compruebe que su dispositivo tiene conexión a internet y tiene configurada una cuenta de Email.</string>
    <string name="flightDetailShareErrorFacebookMsgKey">No puede conectar con facebook ahora, compruebe que su dispositivo tiene conexión a internet y tiene configurada una cuenta de Facebook.</string>
    <string name="flightDetailShareErrorTwitterMsgKey">No puede enviar un tweet ahora, compruebe que su dispositivo tiene conexión a internet y tiene configurada una cuenta de Twitter.</string>
    <string name="flightDetailShareErrorCancelTitleKey">OK</string>
    <string name="flightDetailAlertCreatedTitleKey">Alerta activa para este vuelo</string>
    <!-- Share-FlightDetail -->
    <string name="shareDestination1TitleKey">Mi vuelo a</string>
    <string name="shareDestination2TitleKey">despega a las</string>
    <string name="shareOrigin1TitleKey">Mi vuelo desde</string>
    <string name="shareOrigin2TitleKey">arriva</string>
    <string name="shareEmail1TitleKey">Descarga la App para Iphone desde</string>
    <string name="shareEmail2TitleKey">aquí</string>
    <string name="shareEmail3TitleKey">y para Android desde</string>
    <!-- Config -->
    <string name="configHeaderTitleKey">Acá puedes habilitar las notificaciones que te enviaremos, ya sea información general de Nuevo Pudahuel o contenidos de nuestras tiendas</string>
    <string name="aboutTextKey">- Concepto diseñado por: Cleverox.com\n- Desarrollado por: Moddity.net\n- Políticas de Privacidad: http://www.nuevopudahuel.cl/pol-ticas-de-privacidad</string>
    <string name="socialNetworksConfig">Redes sociales</string>
    <string name="socialNetworksConfigAction">Setup</string>
    <!-- Config-Categories -->
    <string name="categoryKeyAll">Todas las categorias</string>
    <string name="categoryKeyGeneral">Información General</string>
    <string name="categoryKeyTurismo">Turismo</string>
    <string name="categoryKeyTransporte">Transporte</string>
    <string name="categoryKeyHotel">Hotel</string>
    <string name="categoryKeyCasasCambio">Casa de Cambio</string>
    <string name="categoryKeyAsistenciaViaje">Asistencia en Viaje</string>
    <string name="categoryKeyJardinInfantil">Jardín Infantil</string>
    <string name="categoryKeyBanco">Banco</string>
    <string name="categoryKeyTelefonia">Telefonía</string>
    <string name="categoryKeySalud">Salud</string>
    <string name="categoryKeyFarmacias">Farmacias</string>
    <string name="categoryKeyRestaurantes">Restaurantes</string>
    <string name="categoryKeyCuidadoPersonal">Cuidado Personal</string>
    <string name="categoryKeyMusica">Música</string>
    <string name="categoryKeyTecnologia">Tecnología</string>
    <string name="categoryKeyVinosLicores">Vinos y Licores</string>
    <string name="categoryKeyJugueterias">Jugueterias</string>
    <string name="categoryKeyMinimarket">Minimarket</string>
    <string name="categoryKeyVestuarioAccesorios">Vestuario y Accesorios</string>
    <string name="categoryKeyChocolateriaDutyFree">Chocolatería Duty Free</string>
    <!-- Android-Permisison -->
    <string name="permissionDeniedLocation">La app no tiene permiso de ubicación, por favor revisa los permisos en Ajustes del dispositivo</string>
    <string name="permissionDeniedCamera">La app no tiene permiso de cámara, por favor revisa los permisos en Ajustes del dispositivo</string>
    <string name="permissionDeniedStorage">La app no tiene permiso de almacenaje, por favor revisa los permisos en Ajustes del dispositivo</string>

    <string name="bluetoothDisableNotification">Enciende tu Bluetooth y te sorprenderás</string>

    <string name="flightDetailDepartureGateTitleKey">Puerta</string>
    <string name="flightDetailArrivalGateTitleKey">Cinta</string>

    <string name="homeWaitTimeTitleKey">Tiempo de espera en Seguridad</string>
    <string name="homeWaitTimeNationalTitleKey">Nacional</string>
    <string name="homeWaitTimeInternationalTitleKey">Internacional</string>
    <string name="flightHeaderTermTitleKey">Term.</string>
    <string name="flightDetailTerminalTitleKey">Terminal</string>
    <string name="welcomScreenTitle">Bienvenidos/as al Aeropuerto de Santiago</string>
    <string name="internationalFlightsTitle">Vuelos internacionales:</string>
    <string name="nationalFlightsTitle">Vuelos nacionales:</string>
    <string name="T1TerminalTitle">T1 (antiguo terminal)</string>
    <string name="T2TerminalTitle">T2 (nuevo terminal)</string>
    <string name="next">continuar</string>


    <string name="today">Hoy</string>
    <string name="now">Ahora</string>
    <string name="yesterday">Ayer</string>
    <string name="tomorrow">Mañana</string>

</resources>
