<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding_10"
        android:background="#e1cccccc"
        android:id="@+id/myflights_header_container">

        <TextView
            fontPath="@string/avenir_roman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuOptionUserFlightsTitleKey"
            android:textSize="@dimen/textSize20"
            android:textColor="@color/softBlue"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnmenu"
            android:layout_centerVertical="true"
            android:id="@+id/home_menu_button"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#313030"
        android:id="@+id/myflights_menu"
        android:layout_below="@id/myflights_header_container">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_10"
            android:background="@android:color/transparent"
            android:text="@string/flightHeaderFlightTitleKey"
            android:textColor="@color/white"
            android:id="@+id/flights_vuelos_button"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/padding_10"
            android:background="@android:color/transparent"
            android:text="@string/flightHeaderOriginTitleKey"
            android:textColor="@color/white"
            android:id="@+id/flights_origen_button"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_10"
            android:background="@android:color/transparent"
            android:text="@string/flightHeaderTimeTitleKey"
            android:textColor="@color/white"
            android:id="@+id/flights_tiempo_button"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:padding="@dimen/padding_10"
            android:background="@android:color/transparent"
            android:text="@string/flightHeaderStatusTitleKey"
            android:textColor="@color/white"
            android:id="@+id/flights_estado_button"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>