<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:id="@+id/flights_header_container">

        <TextView
            fontPath="@string/avenir_roman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuOptionConfigTitleKey"
            android:textSize="@dimen/textSize20"
            android:textColor="@color/softBlue"
            android:layout_centerInParent="true"
            android:id="@+id/flights_tittle" />

        <ImageButton
            android:id="@+id/bar_home_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="matrix"
            android:background="@drawable/iconbarhome"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btnmenu"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:id="@+id/home_menu_button"
            android:layout_alignParentRight="true"
            android:padding="@dimen/padding_10"
            app:tint="@color/blue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/social_configuration"
        android:padding="@dimen/padding_15"
        android:background="@color/hardGrey">

        <TextView
            fontPath="@string/avenir_roman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_5"
            android:id="@+id/socialNetwork"
            android:textColor="@color/white"
            android:text="@string/socialNetworksConfig"
            android:layout_toLeftOf="@+id/socialNetworkSetup" />

        <TextView
            fontPath="@string/avenir_roman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:id="@+id/socialNetworkSetup"
            android:text="@string/socialNetworksConfigAction"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/softBlue"
        android:padding="@dimen/padding_10">

        <TextView
            fontPath="@string/avenir_roman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/configHeaderTitleKey"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize16"
            android:id="@+id/configuration_info"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/configuration_list"/>

    </ScrollView>

</LinearLayout>